<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/accountDetails"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/menu_account_details" />
        <item
            android:id="@+id/mentalWellness"
            android:icon="@drawable/ic_baseline_mood_24"
            android:title="@string/menu_mental_wellness" />
        <item
            android:id="@+id/reminders"
            android:icon="@drawable/ic_baseline_notifications_active_24"
            android:title="@string/menu_reminders" />
        <item
            android:id="@+id/reset2"
            android:icon="@drawable/ic_baseline_360_24"
            android:title="@string/menu_reset" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_logout" />

    </group>
</menu>