<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fitnessapp.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/accountDetails"
        android:name="com.example.fitnessapp.AccountDetails"
        android:label="@string/menu_account_details"
        tools:layout="@layout/fragment_account_details" />
    <fragment
        android:id="@+id/mentalWellness"
        android:name="com.example.fitnessapp.MentalWellness"
        android:label="@string/menu_mental_wellness"
        tools:layout="@layout/fragment_mental_wellness" />
    <fragment
        android:id="@+id/dietPlan"
        android:name="com.example.fitnessapp.DietPlan"
        android:label="@string/menu_diet_plan"
        tools:layout="@layout/fragment_diet_plan" />
    <fragment
        android:id="@+id/report"
        android:name="com.example.fitnessapp.Report"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_report" />
</navigation>