<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".help"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="HELP"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:padding="10dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="23dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="92dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_text"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="189dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workout_text"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="269dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calorie_tracker_text"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="123dp"
            tools:layout_editor_absoluteY="290dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water_tracker_text"
            android:layout_margin="15dp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="366dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_details_text"
                android:layout_margin="15dp"
                android:textColor="@color/black"
                android:padding="10dp"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mental_wellness_text"
                android:layout_margin="15dp"
                android:textColor="@color/black"
                android:padding="10dp"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_text"
                android:layout_margin="15dp"
                android:textColor="@color/black"
                android:padding="10dp"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout_text"
                android:layout_margin="15dp"
                android:textColor="@color/black"
                android:padding="10dp"
                android:textSize="25sp"/>

</LinearLayout>
    </ScrollView>
</LinearLayout>